--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,13 @@ Thumbs.db
 
 ## Azurite
 .azurite/
+
+## Terraform
+.terraform/
+.terraform.lock.hcl
+*.tfstate
+*.tfstate.*
+*.tfvars
+!terraform.tfvars.example
+tfplan
+.terraform.tfstate.lock.info
