Configure Azure deployment with environment variables and CloudEvents migration
- Add environment variables to all container apps (ProspectService, ApiGateway, EventRelay, ProjectionService)
- Configure frontend to use VITE_API_URL environment variable for API Gateway URL
- Migrate Event Grid publisher from EventGrid schema to CloudEvents v1.0 schema
- Add CommandMessage envelope for proper Service Bus command deserialization
- Add CORS policy for Event Grid webhook validation in ProjectionService
- Add OPTIONS handler for Event Grid webhook endpoint validation
- Update CommandPublisher to include CommandType as Subject in Service Bus messages
- Add container app FQDNs output for Terraform
- Improve database initialization error handling in ProspectService

--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -2,6 +2,10 @@
 FROM node:20-alpine AS build
 WORKDIR /app
 
+# Accept API Gateway URL as build argument
+ARG VITE_API_URL=https://ca-events-api-gateway-dev.icyhill-68ffa719.westus2.azurecontainerapps.io/api
+ENV VITE_API_URL=$VITE_API_URL
+
 # Copy package files
 COPY package*.json ./
 
@@ -11,7 +15,7 @@ RUN npm ci
 # Copy source code
 COPY . .
 
-# Build the application
+# Build the application with environment variable baked in
 RUN npm run build
 
 # Production stage
