--- a/src/services/ProjectionService/Dockerfile
+++ b/src/services/ProjectionService/Dockerfile
@@ -3,18 +3,18 @@ FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /src
 
 # Copy solution file
-COPY ["Events.sln", "./"]
+COPY ["src/services/Events.sln", "./"]
 
 # Copy project files
-COPY ["ProjectionService/ProjectionService.csproj", "ProjectionService/"]
-COPY ["Shared.Events/Shared.Events.csproj", "Shared.Events/"]
+COPY ["src/services/ProjectionService/ProjectionService.csproj", "ProjectionService/"]
+COPY ["src/services/Shared.Events/Shared.Events.csproj", "Shared.Events/"]
 
 # Restore dependencies
 RUN dotnet restore "ProjectionService/ProjectionService.csproj"
 
 # Copy everything else
-COPY ["ProjectionService/", "ProjectionService/"]
-COPY ["Shared.Events/", "Shared.Events/"]
+COPY ["src/services/ProjectionService/", "ProjectionService/"]
+COPY ["src/services/Shared.Events/", "Shared.Events/"]
 
 # Build
 WORKDIR "/src/ProjectionService"
