--- a/src/services/ProspectService.Tests/ProspectService.Tests.csproj
+++ b/src/services/ProspectService.Tests/ProspectService.Tests.csproj
@@ -23,4 +23,9 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ProspectService\ProspectService.csproj" />
+    <ProjectReference Include="..\Shared.Events\Shared.Events.csproj" />
+  </ItemGroup>
+
 </Project>
