--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -7,13 +7,13 @@ ARG VITE_API_URL=https://ca-events-api-gateway-dev.icyhill-68ffa719.westus2.azur
 ENV VITE_API_URL=$VITE_API_URL
 
 # Copy package files
-COPY src/frontend/package*.json ./
+COPY package*.json ./
 
 # Install dependencies
 RUN npm ci
 
 # Copy source code
-COPY src/frontend/ .
+COPY . .
 
 # Build the application with environment variable baked in
 RUN npm run build
