Fix: Explicitly pass TF vars from workflow and align ACR naming with workflow env

--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -127,6 +127,11 @@ jobs:
           TF_VAR_sql_admin_password: ${{ secrets.SQL_ADMIN_PASSWORD }}
           TF_VAR_subscription_id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
           TF_VAR_tenant_id: ${{ secrets.ARM_TENANT_ID }}
+          TF_VAR_project_name: events
+          TF_VAR_environment: dev
+          TF_VAR_location: eastus
+          TF_VAR_tags: '{"project":"events","environment":"dev","managedBy":"terraform"}'
+          TF_VAR_acr_name: ${{ env.ACR_NAME }}
           TF_LOG: DEBUG
 
       - name: Terraform Apply
@@ -141,6 +146,16 @@ jobs:
           TF_VAR_sql_admin_password: ${{ secrets.SQL_ADMIN_PASSWORD }}
           TF_VAR_subscription_id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
           TF_VAR_tenant_id: ${{ secrets.ARM_TENANT_ID }}
+          TF_VAR_project_name: events
+          TF_VAR_environment: dev
+          TF_VAR_location: eastus
+          TF_VAR_tags: '{"project":"events","environment":"dev","managedBy":"terraform"}'
+          TF_VAR_acr_name: ${{ env.ACR_NAME }}
+          TF_VAR_project_name: events
+          TF_VAR_environment: dev
+          TF_VAR_location: eastus
+          TF_VAR_tags: '{"project":"events","environment":"dev","managedBy":"terraform"}'
+          TF_VAR_acr_name: ${{ env.ACR_NAME }}
 
   restart:
     name: Restart Container Apps
