--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -46,12 +46,115 @@ jobs:
     name: Apply Terraform
     runs-on: ubuntu-latest
     needs: test
-    # ...existing steps...
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: ${{ env.TERRAFORM_VERSION }}
+
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: '{"clientId":"${{ secrets.ARM_CLIENT_ID }}","clientSecret":"${{ secrets.ARM_CLIENT_SECRET }}","subscriptionId":"${{ secrets.ARM_SUBSCRIPTION_ID }}","tenantId":"${{ secrets.ARM_TENANT_ID }}"}'
+
+      - name: Terraform Init
+        working-directory: infrastructure
+        run: terraform init
+        env:
+          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+          ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+          ARM_ACCESS_KEY: ${{ secrets.TF_ARM_ACCESS_KEY }}
+
+      - name: Terraform Plan
+        working-directory: infrastructure
+        run: terraform plan -out=tfplan
+        env:
+          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+          ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+          TF_VAR_sql_admin_username: ${{ secrets.SQL_ADMIN_USERNAME }}
+          TF_VAR_sql_admin_password: ${{ secrets.SQL_ADMIN_PASSWORD }}
+          TF_VAR_subscription_id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          TF_VAR_tenant_id: ${{ secrets.ARM_TENANT_ID }}
+          TF_VAR_project_name: events
+          TF_VAR_environment: dev
+          TF_VAR_location: eastus2
+          TF_VAR_tags: '{"project":"events","environment":"dev","managedBy":"terraform"}'
+          TF_VAR_acr_name: ${{ env.ACR_NAME }}
+          TF_LOG: DEBUG
+
+      - name: Terraform Apply
+        working-directory: infrastructure
+        run: terraform apply -auto-approve tfplan
+        env:
+          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+          ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+          TF_VAR_sql_admin_username: ${{ secrets.SQL_ADMIN_USERNAME }}
+          TF_VAR_sql_admin_password: ${{ secrets.SQL_ADMIN_PASSWORD }}
+          TF_VAR_subscription_id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          TF_VAR_tenant_id: ${{ secrets.ARM_TENANT_ID }}
+          TF_VAR_project_name: events
+          TF_VAR_environment: dev
+          TF_VAR_location: eastus2
+          TF_VAR_tags: '{"project":"events","environment":"dev","managedBy":"terraform"}'
+          TF_VAR_acr_name: ${{ env.ACR_NAME }}
 
   build:
     name: Build ${{ matrix.name }}
     runs-on: ubuntu-latest
     needs: terraform
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - name: api-gateway
+            context: src/services
+            dockerfile: src/services/ApiGateway/Dockerfile
+          - name: prospect-service
+            context: src/services
+            dockerfile: src/services/ProspectService/Dockerfile
+          - name: student-service
+            context: src/services
+            dockerfile: src/services/StudentService/Dockerfile
+          - name: instructor-service
+            context: src/services
+            dockerfile: src/services/InstructorService/Dockerfile
+          - name: event-relay
+            context: src/services
+            dockerfile: src/services/EventRelay/Dockerfile
+          - name: projection-service
+            context: src/services
+            dockerfile: src/services/ProjectionService/Dockerfile
+          - name: frontend
+            context: src/frontend
+            dockerfile: src/frontend/Dockerfile
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Build and push to ACR
+        run: |
+          echo "Building ${{ matrix.name }}..."
+
+          az acr build \
+            --registry ${{ env.ACR_NAME }} \
+            --image "${{ matrix.name }}:latest" \
+            --image "${{ matrix.name }}:${{ github.sha }}" \
+            -f "${{ matrix.dockerfile }}" \
+            ${{ matrix.context }}
     strategy:
       fail-fast: false
       matrix:
