--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -155,51 +155,6 @@ jobs:
             --image "${{ matrix.name }}:${{ github.sha }}" \
             -f "${{ matrix.dockerfile }}" \
             ${{ matrix.context }}
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - name: api-gateway
-            context: src/services
-            dockerfile: src/services/ApiGateway/Dockerfile
-          - name: prospect-service
-            context: src/services
-            dockerfile: src/services/ProspectService/Dockerfile
-          - name: student-service
-            context: src/services
-            dockerfile: src/services/StudentService/Dockerfile
-          - name: instructor-service
-            context: src/services
-            dockerfile: src/services/InstructorService/Dockerfile
-          - name: event-relay
-            context: src/services
-            dockerfile: src/services/EventRelay/Dockerfile
-          - name: projection-service
-            context: src/services
-            dockerfile: src/services/ProjectionService/Dockerfile
-          - name: frontend
-            context: src/frontend
-            dockerfile: src/frontend/Dockerfile
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Azure Login
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      - name: Build and push to ACR
-        run: |
-          echo "Building ${{ matrix.name }}..."
-
-          az acr build \
-            --registry ${{ env.ACR_NAME }} \
-            --image "${{ matrix.name }}:latest" \
-            --image "${{ matrix.name }}:${{ github.sha }}" \
-            -f "${{ matrix.dockerfile }}" \
-            ${{ matrix.context }}
 
   # terraform job moved above, now build depends on terraform
 
@@ -267,7 +222,7 @@ jobs:
   restart:
     name: Restart Container Apps
     runs-on: ubuntu-latest
-    needs: terraform
+    needs: build
 
     steps:
       - name: Azure Login
