fix(ci): use heredoc for github output to handle json characters

--- a/.github/workflows/deploy-services.yml
+++ b/.github/workflows/deploy-services.yml
@@ -100,7 +100,9 @@ jobs:
              fi
           done
 
-          echo "matrix={\"include\":$MATRIX}" >> $GITHUB_OUTPUT
+          echo "matrix<<EOF" >> $GITHUB_OUTPUT
+          echo "{\"include\":$MATRIX}" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Set Backend Changed Output
         id: diff
