--- a/src/services/ApiGateway/appsettings.Development.json
+++ b/src/services/ApiGateway/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "ProspectDb": "Server=(localdb)\\mssqllocaldb;Database=ProspectDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
