fix(infra): increase liveness probe startup delay, boost compute limits for .NET services, and add frontend health check

--- a/src/frontend/nginx.conf
+++ b/src/frontend/nginx.conf
@@ -36,6 +36,13 @@ server {
         proxy_read_timeout 86400;
     }
 
+    # Health check endpoint for Azure Container Apps
+    location /health {
+        access_log off;
+        return 200 'healthy';
+        add_header Content-Type text/plain;
+    }
+
     # Handle client-side routing
     location / {
         try_files $uri $uri/ /index.html;
