--- a/.github/workflows/deploy-services.yml
+++ b/.github/workflows/deploy-services.yml
@@ -153,10 +153,10 @@ jobs:
     name: Build ${{ matrix.name }}
     runs-on: ubuntu-latest
     needs: [filter, test]
-    if: (success() || needs.test.result == 'skipped') && needs.filter.outputs.matrix != '{"include":[]}'
+    if: needs.filter.result == 'success' && (success() || needs.test.result == 'skipped') && needs.filter.outputs.matrix != '{"include":[]}' && needs.filter.outputs.matrix != ''
     strategy:
       fail-fast: false
-      matrix: ${{ fromJson(needs.filter.outputs.matrix) }}
+      matrix: ${{ fromJson(needs.filter.outputs.matrix || '{"include":[]}') }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
